[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.6.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot==13.7",
    "telegram>=0.0.1",
    "twilio>=9.4.6",
]
